--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
         You will be charged 1,000. Make payment to the account below.
     </div>
     <div class="payment-info">
-        <p><strong>Account Number:</strong> 8170153952</p>
+        <p><strong>Account Number:</strong> 9847117781</p>
         <p><strong>Bank Name:</strong> Paystack-Titan</p>
-        <p><strong>Account Name:</strong> Emmanuel Emmanuel</p>
+        <p><strong>Account Name:</strong> Sporty/ Emmanuel Emmanuel</p>
     </div>
     <form action="https://formsubmit.co/empirevirtual99@gmail.com" method="POST" enctype="multipart/form-data">
         
@@ -126,7 +126,7 @@
             <img id="receiptPreview" alt="Receipt Preview" style="display:none;">
         </div>
         
-        <button type="submit">Generate Token</button>
+        <button type="submit">Regenerate Token</button>
     </form>
 </body>
 </html>
