--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
     <h1>Generate New Token</h1>
     <div class="note">
-        You will be charged ₦1,100. Make payment to the account below.
+        Your BOT will restart in 24 hours.
     </div>
     <div class="payment-info">
         <p><strong>Account Number:</strong> 9847117781</p>
